# rules_python

./: .bazelrc.deleted_packages  .gitattributes  .gitignore  CHANGELOG.md
python/private/: BUILD.bazel  py_console_script_binary.bzl  pyproject_repo.bzl  pyproject_utils.bzl  pyproject_version_extractor.py  python.bzl
python/private/pypi/: BUILD.bazel  extension.bzl  hub_builder.bzl
tests/pyproject/compile_requirements_test/: BUILD.bazel  MODULE.bazel  pyproject.toml  requirements_lock.txt  test_compile_requirements.py
tests/pyproject/pip_integration_test/: BUILD.bazel  MODULE.bazel  pyproject.toml  requirements_lock.txt  test_pip_works.py
tests/pyproject/priority_test/: BUILD.bazel  MODULE.bazel  pyproject.toml  test_priority.py
tests/pyproject/python_toolchain_test/: BUILD.bazel  MODULE.bazel  pyproject.toml  test_version.py
