"""Test that pyproject.toml sets pip python_version."""

module(name = "pip_integration_test")

bazel_dep(name = "rules_python", version = "")
local_path_override(
    module_name = "rules_python",
    path = "../../..",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(pyproject_toml = "//:pyproject.toml")
use_repo(python, "python_version_from_pyproject", "python_versions", "pythons_hub")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.default(pyproject_toml = "//:pyproject.toml")
pip.parse(
    hub_name = "pip",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")
