"""Test that pyproject.toml sets Python toolchain version."""

module(name = "python_toolchain_test")

bazel_dep(name = "rules_python", version = "")
local_path_override(
    module_name = "rules_python",
    path = "../../..",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(pyproject_toml = "//:pyproject.toml")
use_repo(python, "python_version_from_pyproject", "python_versions", "pythons_hub")
